<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    android:paddingTop="@dimen/activity_vertical_margin"    android:paddingBottom="@dimen/activity_vertical_margin"    android:focusable="true"    android:focusableInTouchMode="true"    android:keepScreenOn="true"    android:orientation="vertical"    tools:context="net.cmwang.accesscontrol.MainActivity"    android:background="@color/colorBlack">    <TextView        android:id="@+id/heading"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/paired_devices"        android:layout_alignParentTop="true"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:textColor="@color/colorRed"        android:textIsSelectable="false">    </TextView>    <ListView        android:id="@+id/devices_list_view"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@+id/heading"        android:layout_above="@+id/device_paired">    </ListView>    <android.support.design.widget.TextInputLayout        android:id="@+id/doorNumberWrapper"        android:layout_above="@+id/serverAddressWrapper"        android:layout_alignParentStart="true"        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"        android:textColorHint="@color/colorRed"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <android.support.design.widget.TextInputEditText            android:id="@+id/door_number"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:ems="20"            android:hint="@string/hint_door_number"            android:inputType="number"            android:text="@string/default_door_number"            android:textColor="@color/colorWhite">        </android.support.design.widget.TextInputEditText>    </android.support.design.widget.TextInputLayout>    <android.support.design.widget.TextInputLayout        android:id="@+id/serverAddressWrapper"        android:layout_above="@+id/device_paired"        android:layout_alignParentStart="true"        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"        android:textColorHint="@color/colorRed"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <android.support.design.widget.TextInputEditText            android:id="@+id/server_address"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:ems="20"            android:hint="@string/hint_server_address"            android:inputType="text"            android:text="@string/default_server_address"            android:textColor="@color/colorWhite">        </android.support.design.widget.TextInputEditText>    </android.support.design.widget.TextInputLayout>    <Button        android:id="@+id/device_paired"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/paired_devices"        android:layout_alignParentBottom="true"        android:layout_alignParentLeft="true"        android:textColor="@color/colorWhite"        android:layout_alignParentStart="true"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"        android:background="@color/colorRed">    </Button></RelativeLayout>